Added diagrams, cleaned up some references, and finished ch10

--- a/eoverp.bib
+++ b/eoverp.bib
@@ -128,8 +128,7 @@ author="{CMS Collaboration}"
       primaryClass   = "hep-ph",
 }
 @article{CTEQ,
-      author         = "Lai, Hung-Liang and Guzzi, Marco and Huston, Joey and Li,
-                        Zhao and Nadolsky, Pavel M. and others",
+      author         = "Lai, Hung-Liang and Guzzi, Marco and Huston, Joey and Li, Zhao and Nadolsky, Pavel M. and others",
       title          = "{New parton distributions for collider physics}",
       journal        = "Phys. Rev. D",
       volume         = "82",
