--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -86,6 +86,9 @@
 \acro{JES}{jet energy scale}
 \acro{LLP}{Long-Lived Particle}
 \acro{CR}{Control Region}
+\acro{NLO}{next-to-leading order}
+\acro{NLL}{next-to-leading logarithmic}
+\acro{PDF}{parton distribution function}
 \end{acronym}
                    
 \endgroup
