--- a/thesis.bib
+++ b/thesis.bib
@@ -248,3 +248,198 @@
       reportNumber   = "CALT-68-648",
       SLACcitation   = "%%CITATION = PHLTA,B76,575;%%"
 }
+
+@article{g4_rhad_2009,
+      author         = "Mackeprang, Rasmus and Milstead, David",
+      title          = "{An Updated Description of Heavy-Hadron Interactions in GEANT-4}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C66",
+      year           = "2010",
+      pages          = "493-501",
+      doi            = "10.1140/epjc/s10052-010-1262-1",
+      eprint         = "0908.1868",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0908.1868;%%"
+}
+
+
+@Article{pythia6,
+     author    = "Sj{\"o}strand, Torbjorn and Mrenna, Stephen and Skands, Peter",
+     title     = "{PYTHIA 6.4 Physics and Manual}",
+     journal   = "JHEP",
+     volume    = "0605",
+     year      = "2006",
+     pages     = "026",
+     eprint    = "hep-ph/0603175",
+     archivePrefix = "arXiv",
+     doi = "10.1088/1126-6708/2006/05/026",
+     SLACcitation  = "%%CITATION = HEP-PH/0603175;%%"
+}
+
+@techreport{ATL-PHYS-PUB-2011-014,
+      title         = "{Further ATLAS tunes of PYTHIA6 and Pythia 8}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-PHYS-PUB-2011-014",
+      month         = "Nov",
+      year          = "2011",
+      reportNumber  = "ATL-PHYS-PUB-2011-014",
+      url           = "https://cds.cern.ch/record/1400677",
+}
+
+@article{heavy_hadronization,
+      author         = "Kraan, Aafke Christine",
+      title          = "{Interactions of heavy stable hadronizing particles}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C37",
+      year           = "2004",
+      pages          = "91-104",
+      doi            = "10.1140/epjc/s2004-01946-6",
+      eprint         = "hep-ex/0404001",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = HEP-EX/0404001;%%"
+}
+
+@Article{Beenakker:1996ch,
+     author    = "Beenakker, W. and Hopker, R. and Spira, M. and Zerwas, P. M.",
+     title     = "{Squark and gluino production at hadron colliders}",
+     journal   = "Nucl. Phys. B",
+     volume    = "492",
+     year      = "1997",
+     pages     = "51",
+     eprint    = "hep-ph/9610490",
+     archivePrefix = "arXiv",
+     doi       = "10.1016/S0550-3213(97)00084-9",
+     SLACcitation  = "%%CITATION = HEP-PH/9610490;%%"
+}
+
+@Article{Kulesza:2008jb,
+      author         = "Kulesza, A. and Motyka, L.",
+      title          = "{Threshold resummation for squark-antisquark and gluino-pair production at the LHC}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "102",
+      pages          = "111802",
+      doi            = "10.1103/PhysRevLett.102.111802",
+      year           = "2009",
+      eprint         = "0807.2405",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-08-096",
+      SLACcitation   = "%%CITATION = ARXIV:0807.2405;%%",
+}
+
+@Article{Kulesza:2009kq,
+      author         = "Kulesza, A. and Motyka, L.",
+      title          = "{Soft gluon resummation for the production of gluino-gluino and squark-antisquark pairs at the LHC}",
+      journal        = "Phys. Rev. D",
+      volume         = "80",
+      pages          = "095004",
+      doi            = "10.1103/PhysRevD.80.095004",
+      year           = "2009",
+      eprint         = "0905.4749",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-09-078, PITHA-09-11",
+      SLACcitation   = "%%CITATION = ARXIV:0905.4749;%%",
+}
+
+
+@Article{Beenakker:2009ha,
+      author         = "Beenakker, Wim and Brensing, Silja and Kramer, Michael and Kulesza, Anna and Laenen, Eric and others",
+      title          = "{Soft-gluon resummation for squark and gluino hadroproduction}",
+      journal        = "JHEP",
+      volume         = "0912",
+      pages          = "041",
+      doi            = "10.1088/1126-6708/2009/12/041",
+      year           = "2009",
+      eprint         = "0909.4418",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "ITP-UU-09-33, NIKHEF-2009-015",
+      SLACcitation   = "%%CITATION = ARXIV:0909.4418;%%",
+}
+
+
+@Article{Beenakker:2011fu,
+      author         = "Beenakker, W. and Brensing, S. and Kramer, M.n and Kulesza, A. and Laenen, E. and others",
+      title          = "{Squark and Gluino Hadroproduction}",
+      journal        = "Int. J. Mod. Phys. A",
+      volume         = "26",
+      pages          = "2637",
+      doi            = "10.1142/S0217751X11053560",
+      year           = "2011",
+      eprint         = "1105.1110",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-11-060, ITFA-11-09, ITP-UU-11-13, NIKHEF-2011-011, TTK-11-12",
+      SLACcitation   = "%%CITATION = ARXIV:1105.1110;%%",
+}
+
+@report{Kramer:2012bx,
+      author         = "Kr{\"a}mer, Michael and others",
+      title          = "{Supersymmetry production cross sections in pp collisions at $\sqrt{s} = 7$~TeV}",
+      year           = "2012",
+      eprint         = "1206.2892",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2012-163",
+      SLACcitation   = "%%CITATION = ARXIV:1206.2892;%%",
+}
+
+@Article{Fairbairn:2006gg,
+     author    = "Fairbairn, M. and others",
+     title     = "{Stable massive particles at colliders}",
+     journal   = "Phys. Rept.",
+     volume    = "438",
+     year      = "2007",
+     pages     = "1",
+     eprint    = "hep-ph/0611040",
+     archivePrefix = "arXiv",
+     doi       = "10.1016/j.physrep.2006.10.002",
+     SLACcitation  = "%%CITATION = HEP-PH/0611040;%%"
+}
+
+@article{Mackeprang:2006gx,
+      author         = "Mackeprang, Rasmus and Rizzi, Andrea",
+      title          = "{Interactions of Coloured Heavy Stable Particles in Matter}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C50",
+      year           = "2007",
+      pages          = "353-362",
+      doi            = "10.1140/epjc/s10052-007-0252-4",
+      eprint         = "hep-ph/0612161",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0612161;%%"
+}
+
+@article{Mackeprang:2009ad,
+      author         = "Mackeprang, Rasmus and Milstead, David",
+      title          = "{An Updated Description of Heavy-Hadron Interactions in GEANT-4}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C66",
+      year           = "2010",
+      pages          = "493-501",
+      doi            = "10.1140/epjc/s10052-010-1262-1",
+      eprint         = "0908.1868",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0908.1868;%%"
+}
+
+@article{madgraph,
+      author         = "Alwall, J. and Frederix, R. and Frixione, S. and Hirschi, V. and Maltoni, F. and Mattelaer, O. and Shao, H. -S. and Stelzer, T. and Torrielli, P. and Zaro, M.",
+      title          = "{The automated computation of tree-level and next-to-leading order differential cross sections, and their matching to parton shower simulations}",
+      journal        = "JHEP",
+      volume         = "07",
+      year           = "2014",
+      pages          = "079",
+      doi            = "10.1007/JHEP07(2014)079",
+      eprint         = "1405.0301",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2014-064, CP3-14-18, LPN14-066, MCNET-14-09, ZU-TH-14-14",
+      SLACcitation   = "%%CITATION = ARXIV:1405.0301;%%"
+}
