Implemented most comments for ch11/ch12. Still waiting on a figure.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.34\xspace}
+\newcommand{\myVersion}{Version 0.35\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -79,6 +79,7 @@
 \newcommand*{\Nss}{\ensuremath{N_{SS}}\xspace}
 \newcommand*{\Nsplit}{\ensuremath{N_{\mathrm{split}}}\xspace}
 \newcommand*{\met}{\ensuremath{E_T^{\mathrm{miss}}}\xspace}
+\newcommand*{\calomet}{\ensuremath{\mathrm{Calorimeter}~E_T^{\mathrm{miss}}}\xspace}
 \newcommand*{\rhadron}{R-Hadron\xspace}
 \newcommand*{\rhadrons}{R-Hadrons\xspace}
 \newcommand*{\MeVgcm}{\ensuremath{\MeV\mathrm{g}^{-1}\mathrm{cm}^2}\xspace}
