--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -89,6 +89,7 @@
 \acro{NLO}{next-to-leading order}
 \acro{NLL}{next-to-leading logarithmic}
 \acro{PDF}{parton distribution function}
+\acro{ISR}{initial state radiation}
 \end{acronym}
                    
 \endgroup
