--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -93,6 +93,7 @@
 \acro{RMS}{root mean square}
 \acro{IBL}{Insertible B-Layer}
 \acro{CP}{Combined Performance}
+\acro{MDT}{Monitored Drift Tube}
 \end{acronym}
                    
 \endgroup
