--- a/thesis.bib
+++ b/thesis.bib
@@ -443,3 +443,17 @@
       reportNumber   = "CERN-PH-TH-2014-064, CP3-14-18, LPN14-066, MCNET-14-09, ZU-TH-14-14",
       SLACcitation   = "%%CITATION = ARXIV:1405.0301;%%"
 }
+
+
+@article{CLS_method,
+      author         = "Read, Alexander L.",
+      title          = "{Presentation of search results: The CL(s) technique}",
+      booktitle      = "{Advanced Statistical Techniques in Particle Physics. Proceedings, Conference, Durham, UK, March 18-22, 2002}",
+      journal        = "J. Phys.",
+      volume         = "G28",
+      year           = "2002",
+      pages          = "2693-2704",
+      doi            = "10.1088/0954-3899/28/10/313",
+      note           = "[,11(2002)]",
+      SLACcitation   = "%%CITATION = JPAGA,G28,2693;%%"
+}
