Wrote first half of lhc chapter, fixes for results chapter.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.37\xspace}
+\newcommand{\myVersion}{Version 0.38\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -75,6 +75,9 @@
 \let\kev=\keV
 \let\ev=\eV
 
+\newcommand*{\lcms}{\ensuremath{\mathrm{cm}^{-2}s^{-1}}}
+\newcommand*{\ipb}{\ensuremath{\mathrm{pb}^{-1}}}
+\newcommand*{\ifb}{\ensuremath{\mathrm{fb}^{-1}}}
 \newcommand*{\dedx}{\ensuremath{dE/dx}\xspace}
 \newcommand*{\Nss}{\ensuremath{N_{SS}}\xspace}
 \newcommand*{\Nsplit}{\ensuremath{N_{\mathrm{split}}}\xspace}
