--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -79,6 +79,7 @@
 \acro{LSP}{Lightest Supersymmetric Particle}
 \acro{LHC}{Large Hadron Collider}
 \acro{ATLAS}{A Toroidal LHC ApparatuS}
+\acro{LEP}{the Large Electron Positron collider}
 \acro{ToT}{time over threshold}
 \acro{LCW}{local cluster weighted}
 \acro{MIP}{minimally ionizing particle}
