--- a/thesis.bib
+++ b/thesis.bib
@@ -1,3 +1,73 @@
+@article{atlas_experiment,
+      author         = "{ATLAS Collaboration}",
+      title          = "{The ATLAS Experiment at the CERN Large Hadron Collider}",
+      collaboration  = "ATLAS",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08003",
+      doi            = "10.1088/1748-0221/3/08/S08003",
+      SLACcitation   = "%%CITATION = JINST,3,S08003;%%"
+}
+
+@article{alice_experiment,
+      author         = "Aamodt, K. and others",
+      title          = "{The ALICE experiment at the CERN LHC}",
+      collaboration  = "ALICE",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08002",
+      doi            = "10.1088/1748-0221/3/08/S08002",
+      SLACcitation   = "%%CITATION = JINST,3,S08002;%%"
+}
+
+@article{cms_experiment,
+      author         = "Chatrchyan, S. and others",
+      title          = "{The CMS experiment at the CERN LHC}",
+      collaboration  = "CMS",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08004",
+      doi            = "10.1088/1748-0221/3/08/S08004",
+      SLACcitation   = "%%CITATION = JINST,3,S08004;%%"
+}
+
+@article{lhcb_experiment,
+      author         = "Alves, Jr., A. Augusto and others",
+      title          = "{The LHCb Detector at the LHC}",
+      collaboration  = "LHCb",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08005",
+      doi            = "10.1088/1748-0221/3/08/S08005",
+      SLACcitation   = "%%CITATION = JINST,3,S08005;%%"
+}
+
+
+@article{lhc_machine,
+      author         = "Evans, Lyndon and Bryant, Philip",
+      title          = "{LHC Machine}",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08001",
+      doi            = "10.1088/1748-0221/3/08/S08001",
+      SLACcitation   = "%%CITATION = JINST,3,S08001;%%"
+}
+
+@unpublished{lhc_guide,
+      author        = "Lefevre, C",
+      title         = "{LHC: the guide (English version). Guide du LHC (version
+                       anglaise)}",
+      month         = "Feb",
+      year          = "2009",
+      reportNumber  = "CERN-Brochure-2009-003-Eng",
+      url           = "https://cds.cern.ch/record/1165534",
+}
+
 @article{pdg,
       author         = "Olive, K. A. and others",
       title          = "{Review of Particle Physics}",
