Finished up first pass at LHC chapter

--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -79,7 +79,13 @@
 \acro{LSP}{Lightest Supersymmetric Particle}
 \acro{LHC}{Large Hadron Collider}
 \acro{ATLAS}{A Toroidal LHC ApparatuS}
+\acro{CMS}{Compact Muon Solenoid}
+\acro{ALICE}{A Large Ion Collider Experiment}
+\acro{LHCb}{Large Hadron Collider beauty experiment}
 \acro{LEP}{the Large Electron Positron collider}
+\acro{PS}{Proton Synchrotron}
+\acro{PSB}{Proton Synchrotron Booster}
+\acro{SPS}{Super Proton Synchrotron}
 \acro{ToT}{time over threshold}
 \acro{LCW}{local cluster weighted}
 \acro{MIP}{minimally ionizing particle}
@@ -95,6 +101,7 @@
 \acro{IBL}{Insertible B-Layer}
 \acro{CP}{Combined Performance}
 \acro{MDT}{Monitored Drift Tube}
+\acro{RF}{radiofrequency}
 \end{acronym}
                    
 \endgroup
