One more figure and some proofreading

--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -75,6 +75,7 @@
 
 \begin{acronym}[UML]
 \acro{SM}{Standard Model}
+\acro{CERN}{European Organization for Nuclear Research}
 \acro{SUSY}{Supersymmetry}
 \acro{LSP}{Lightest Supersymmetric Particle}
 \acro{LHC}{Large Hadron Collider}
