Filled out another good chunk of detector chapter

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.43\xspace}
+\newcommand{\myVersion}{Version 0.44\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -59,6 +59,7 @@
 \newcommand{\Eg}{E.\,g.} 
 
 \newcommand*{\tsup}[1]{\textsuperscript{#1}}
+\newcommand*{\tsub}[1]{\textsubscript{#1}}
 
 \newcounter{dummy} % Necessary for correct hyperlinks (to index, bib, etc.)
 \providecommand{\mLyX}{L\kern-.1667em\lower.25em\hbox{Y}\kern-.125emX\@}
@@ -75,6 +76,7 @@
 \let\kev=\keV
 \let\ev=\eV
 
+\newcommand*{\um}{\ensuremath{\mu\mathrm{m}}}
 \newcommand*{\lcms}{\ensuremath{\mathrm{cm}^{-2}s^{-1}}}
 \newcommand*{\ipb}{\ensuremath{\mathrm{pb}^{-1}}}
 \newcommand*{\ifb}{\ensuremath{\mathrm{fb}^{-1}}}
