--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -87,9 +87,18 @@
 \acro{PS}{Proton Synchrotron}
 \acro{PSB}{Proton Synchrotron Booster}
 \acro{SPS}{Super Proton Synchrotron}
+\acro{SCT}{silicon microstrip}
+\acro{TRT}{transition radiation tracker}
+\acro{LAr}{Liquid Argon}
+\acro{EM}{electromagnetic}
+\acro{RPC}{Resistive Plate Chamber}
+\acro{TGC}{Thin Gap Chamber}
+\acro{MDT}{Monitored Drift Tube}
+\acro{CSC}{Cathode Strip Chamber}
 \acro{ToT}{time over threshold}
 \acro{LCW}{local cluster weighted}
 \acro{MIP}{minimally ionizing particle}
+\acro{IP}{impact parameter}
 \acro{EPJC}{European Physical Journal C}
 \acro{JES}{jet energy scale}
 \acro{LLP}{Long-Lived Particle}
