--- a/thesis.bib
+++ b/thesis.bib
@@ -527,3 +527,25 @@
       note           = "[,11(2002)]",
       SLACcitation   = "%%CITATION = JPAGA,G28,2693;%%"
 }
+
+@article{gpd_lhc,
+      author = {Daniel Froidevaux and Paris Sphicas},
+      title = "{General-Purpose Detectors for the Large Hadron Collider}",
+      journal = "{Annual Review of Nuclear and Particle Science}",
+      volume = "56",
+      number = "1",
+      pages = "375-440",
+      year = "2006",
+      doi = "10.1146/annurev.nucl.54.070103.181209",
+      url = "http://dx.doi.org/10.1146/annurev.nucl.54.070103.181209",
+}
+
+@techreport{ibl_tdr,
+      author        = "Capeans, M and Darbo, G and Einsweiller, K and Elsing, M and Flick, T and Garcia-Sciveres, M and Gemme, C and Pernegger, H and Rohne, O and Vuillermet, R",
+      title         = "{ATLAS Insertable B-Layer Technical Design Report}",
+      number        = "CERN-LHCC-2010-013. ATLAS-TDR-19",
+      month         = "Sep",
+      year          = "2010",
+      reportNumber  = "CERN-LHCC-2010-013",
+      url           = "https://cds.cern.ch/record/1291633",
+}
