Finished detector chapter

--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -96,6 +96,7 @@
 \acro{MDT}{Monitored Drift Tube}
 \acro{CSC}{Cathode Strip Chamber}
 \acro{ToT}{time over threshold}
+\acro{RoI}{Region of Interest}
 \acro{LCW}{local cluster weighted}
 \acro{MIP}{minimally ionizing particle}
 \acro{IP}{impact parameter}
