--- a/thesis.bib
+++ b/thesis.bib
@@ -549,3 +549,17 @@
       reportNumber  = "CERN-LHCC-2010-013",
       url           = "https://cds.cern.ch/record/1291633",
 }
+
+
+@article{ms_detail,
+      author         = "Palestini, S.",
+      title          = "{The muon spectrometer of the ATLAS experiment}",
+      booktitle      = "{Innovative particle and radiation detectors. Proceedings, 8th Topical Seminar, Siena, Italy, October 21-24, 2002}",
+      journal        = "Nucl. Phys. Proc. Suppl.",
+      volume         = "125",
+      year           = "2003",
+      pages          = "337-345",
+      doi            = "10.1016/S0920-5632(03)91013-9",
+      note           = "[,337(2003)]",
+      SLACcitation   = "%%CITATION = NUPHZ,125,337;%%"
+}
