Wrote 3/4 of the reconstruction chapter.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.45\xspace}
+\newcommand{\myVersion}{Version 0.46\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -94,9 +94,32 @@
 \newcommand*{\ptcone}{\ensuremath{p_T^\mathrm{Cone}}\xspace}
 \newcommand*{\emfrac}{\ensuremath{f_\mathrm{EM}}\xspace}
 \newcommand*{\lumi}{3.2}
+\newcommand*{\signoise}{\ensuremath{\sigma_{\mathrm{noise}}}}
 
 \newcommand*{\fullfig}{0.85\textwidth}
 \newcommand*{\halffig}{0.49\textwidth}
+
+% --------------------------------------------------------------------------------
+% Particles
+% --------------------------------------------------------------------------------
+
+\newcommand*{\pL}{\ensuremath{\Lambda}\xspace}
+\newcommand*{\pLB}{\ensuremath{\bar{\Lambda}}\xspace}
+\newcommand*{\pKS}{\ensuremath{K_\text{S}^{0}}\xspace}
+\newcommand*{\pKL}{\ensuremath{K_L}\xspace}
+\newcommand*{\pP}{\ensuremath{p}\xspace}
+\newcommand*{\pAP}{\ensuremath{\bar{p}}\xspace}
+\newcommand*{\pip}{\ensuremath{\pi^+}\xspace}
+\newcommand*{\pim}{\ensuremath{\pi^-}\xspace}
+\newcommand*{\piz}{\ensuremath{\pi^0}\xspace}
+\newcommand*{\ep}{\ensuremath{E/p}\xspace}
+\newcommand*{\epav}{\ensuremath{\langle E/p \rangle}\xspace}
+\newcommand*{\epcor}{\ensuremath{\langle E/p \rangle_{\mathrm{COR}}}\xspace}
+\newcommand*{\epbg}{\ensuremath{\langle E/p \rangle_{\mathrm{BG}}}\xspace}
+\newcommand*{\Ea}{\ensuremath{E_a}\xspace}
+\newcommand*{\QGSP}{\texttt{QGSP\_BERT}\xspace}
+\newcommand*{\FTFP}{\texttt{FTFP\_BERT}\xspace}
+
 %----------------------------------------------------------------------------------------
 %	PACKAGES
 %----------------------------------------------------------------------------------------
