--- a/thesis.bib
+++ b/thesis.bib
@@ -563,3 +563,36 @@
       note           = "[,337(2003)]",
       SLACcitation   = "%%CITATION = NUPHZ,125,337;%%"
 }
+
+@article{newt,
+      author         = "Cornelissen, T. and Elsing, M. and Fleischmann, S. and Liebig, W. and Moyse, E.",
+      editor         = "Salzburger, A.",
+      title          = "{Concepts, Design and Implementation of the ATLAS New Tracking (NEWT)}",
+      year           = "2007",
+      reportNumber   = "ATL-SOFT-PUB-2007-007, ATL-COM-SOFT-2007-002",
+      SLACcitation   = "%%CITATION = ATL-SOFT-PUB-2007-007;%%"
+}
+
+@article{tracking_performance,
+      title          = "{Performance of the ATLAS Inner Detector Track and Vertex Reconstruction in the High Pile-Up LHC Environment}",
+      collaboration  = "ATLAS",
+      year           = "2012",
+      reportNumber   = "ATLAS-CONF-2012-042",
+      SLACcitation   = "%%CITATION = ATLAS-CONF-2012-042;%%"
+}
+
+@article{pixel_nn,
+      author         = "{ATLAS Collaboration}",
+      title          = "{A neural network clustering algorithm for the ATLAS silicon pixel detector}",
+      collaboration  = "ATLAS",
+      journal        = "JINST",
+      volume         = "9",
+      year           = "2014",
+      pages          = "P09009",
+      doi            = "10.1088/1748-0221/9/09/P09009",
+      eprint         = "1406.7690",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-120",
+      SLACcitation   = "%%CITATION = ARXIV:1406.7690;%%"
+}
