Finished reco chapter. Needs some review.

--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -113,6 +113,7 @@
 \acro{CP}{Combined Performance}
 \acro{MDT}{Monitored Drift Tube}
 \acro{RF}{radiofrequency}
+\acro{HLT}{high level trigger}
 \end{acronym}
                    
 \endgroup
