--- a/thesis.bib
+++ b/thesis.bib
@@ -596,3 +596,17 @@
       reportNumber   = "CERN-PH-EP-2014-120",
       SLACcitation   = "%%CITATION = ARXIV:1406.7690;%%"
 }
+
+@Article{antikt,
+     author    = "Cacciari, Matteo and Salam, Gavin P. and Soyez, Gregory",
+     title     = "{The anti-$k_t$ jet clustering algorithm}",
+     journal   = "JHEP",
+     volume    = "04",
+     year      = "2008",
+     pages     = "063",
+     eprint    = "0802.1189",
+     archivePrefix = "arXiv",
+     primaryClass  =  "hep-ph",
+     doi       = "10.1088/1126-6708/2008/04/063",
+     SLACcitation  = "%%CITATION = 0802.1189;%%"
+}
