--- a/axen_thesis.tex
+++ b/axen_thesis.tex
@@ -40,6 +40,7 @@
 \input{classicthesis-config}
 
 \addbibresource{ATLAS.bib} 
+\addbibresource{ConfNotes.bib}
 \addbibresource{eoverp.bib} 
 \addbibresource{thesis.bib}
 
