First half of theory section.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.47\xspace}
+\newcommand{\myVersion}{Version 0.48\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -75,6 +75,10 @@
 \let\mev=\MeV
 \let\kev=\keV
 \let\ev=\eV
+
+\newcommand{\vect}[1]{\mathbf{#1}}
+\newcommand{\mL}{\mathcal{L}}
+\newcommand{\mS}{\mathcal{S}}
 
 \newcommand*{\um}{\ensuremath{\mu\mathrm{m}}}
 \newcommand*{\lcms}{\ensuremath{\mathrm{cm}^{-2}s^{-1}}}
@@ -160,6 +164,7 @@ natbib=true % natbib compatibility mode (\citep and \citet still work)
 \renewcommand*{\aclabelfont}[1]{\acsfont{#1}}
 \usepackage{graphicx} 
 \usepackage[left]{lineno}
+\usepackage{slashed}
 \linenumbers
 
 %----------------------------------------------------------------------------------------
