--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -114,6 +114,7 @@
 \acro{MDT}{Monitored Drift Tube}
 \acro{RF}{radiofrequency}
 \acro{HLT}{high level trigger}
+\acro{QCD}{quantum chromodynamics}
 \end{acronym}
                    
 \endgroup
