Finished SM theory chapter.

--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -115,6 +115,7 @@
 \acro{RF}{radiofrequency}
 \acro{HLT}{high level trigger}
 \acro{QCD}{quantum chromodynamics}
+\acro{BSM}{beyond the Standard Model}
 \end{acronym}
                    
 \endgroup
