--- a/thesis.bib
+++ b/thesis.bib
@@ -610,3 +610,41 @@
      doi       = "10.1088/1126-6708/2008/04/063",
      SLACcitation  = "%%CITATION = 0802.1189;%%"
 }
+
+@article{pdfs,
+      author         = "Martin, A. D. and Stirling, W. J. and Thorne, R. S. and Watt, G.",
+      title          = "{Parton distributions for the LHC}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C63",
+      year           = "2009",
+      pages          = "189-285",
+      doi            = "10.1140/epjc/s10052-009-1072-5",
+      eprint         = "0901.0002",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-08-95, DCPT-08-190, CAVENDISH-HEP-08-16",
+      SLACcitation   = "%%CITATION = ARXIV:0901.0002;%%"
+}
+
+@misc{unification_plot,
+   author = "Nobelprize.org",
+   title = "The 2004 Nobel Prize in Physics - Popular Information"
+   year = "2014",
+   url = "http://www.nobelprize.org/nobel_prizes/physics/laureates/2004/popular.html"
+   note = "[Online; accessed 11 Nov 2016]"
+}
+
+@article{rotation_curves,
+      author         = "Kafle, Prajwal Raj and Sharma, Sanjib and Lewis, Geraint F. and Bland-Hawthorn, Joss",
+      title          = "{On the Shoulders of Giants: Properties of the Stellar Halo and the Milky Way Mass Distribution}",
+      journal        = "Astrophys. J.",
+      volume         = "794",
+      year           = "2014",
+      number         = "1",
+      pages          = "59",
+      doi            = "10.1088/0004-637X/794/1/59",
+      eprint         = "1408.1787",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.GA",
+      SLACcitation   = "%%CITATION = ARXIV:1408.1787;%%"
+}
