Forgot bib update

--- a/thesis.bib
+++ b/thesis.bib
@@ -628,9 +628,9 @@
 
 @misc{unification_plot,
    author = "Nobelprize.org",
-   title = "The 2004 Nobel Prize in Physics - Popular Information"
+   title = "The 2004 Nobel Prize in Physics - Popular Information",
    year = "2014",
-   url = "http://www.nobelprize.org/nobel_prizes/physics/laureates/2004/popular.html"
+   url = "http://www.nobelprize.org/nobel_prizes/physics/laureates/2004/popular.html",
    note = "[Online; accessed 11 Nov 2016]"
 }
 
